# zen-browser-profile-snapshots

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  deno.json  flake.nix
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci-linux.yml  ci-windows.yml  (+3 more)
docs/: command-execution-reference.md
rust/zen-backup/: Cargo.toml  build.rs
rust/zen-backup/src/: lib.rs  main.rs  test-mode.rs
rust/zen-backup/src/cli/: global_options.rs  help.rs  mod.rs  version.rs
rust/zen-backup/src/commands/: backup.rs  feedback.rs  install.rs  list.rs  mod.rs  restore.rs  schedule.rs  status.rs  uninstall.rs
rust/zen-backup/src/config/: mod.rs
rust/zen-backup/src/core/: archive_naming.rs  mod.rs
rust/zen-backup/src/debug/: mod.rs
rust/zen-backup/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
rust/zen-backup/tests/: acceptance-rust-test.rs  cli-help-version-test.rs  feedback-debug-test.rs  smoke-cli-test.rs  status-list-test.rs  unknown-command-test.rs
scripts/: build-target.ts  embedded-version.ts  generate-combined-release-notes.ts  hooks--pre-commit.ts  install-from-release.sh  install-hooks.ts  lint--markdown.ts  release-linux.ts  release-macos.ts  release_macos.ts  smoke_macos_scheduler.ts  task--hooks--install.ts  task--hooks--pre-commit.ts  task--lint--markdown.ts  task--release-linux.ts  task--release-macos.ts  task--release-windows.ts  task--test--smoke--windows--scheduler.ts  task--test-acceptance--rust.ts  task--test-acceptance.ts
src/: archive.ts  config.ts  errors.ts  log.ts  main.ts  sqlite.ts  types.ts
(+97 files in other folders)
