[package]
name = "zen-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
cucumber = "0.22.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "acceptance-rust"
path = "tests/acceptance-rust-test.rs"
harness = false
